<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ejlo-notes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_archive">Archive</string>
    <string name="title_activity_email">Email Menu</string>
    <string name="title_activity_summary">Summary</string>
    <string name="add">Add</string>
    <string name="email">Email</string>
    <string name="go_to_archive">Go To Archive</string>
    <string name="summary">Summary</string>
    <string name="enter_text">Enter text</string>
    <string name="error">Error</string>
    <string name="email_field">user@example.ca</string>
    <string name="to">To: </string>
    <string name="email_all_to_do">Email To Do List</string>
    <string name="email_some_to_do">Email Selection of \nTo Do List Items</string>
    <string name="email_some_archive">Email Selection of \nArchived Items</string>
    <string name="email_all">Email All \n (Including Archived Items)</string>
    <string name="title_activity_email_to_do">Email To Do List Selection</string>
    <string name="title_activity_email_archive">Email Archive Selection</string>
    <string name="email_selection">Email Selection</string>

</resources>
